@@ -3,7 +3,7 @@ name=hive
 version=0.5.0
 year=2009
 
-hadoop.version=0.19.0
+hadoop.version=0.20.0
 hadoop.mirror=http://archive.apache.org/dist
 
 build.dir.hive=${hive.root}/build
