@@ -267,7 +267,7 @@
   <target name="eclipse-files" depends="init"
           description="Generate files for Eclipse">
 
-    <condition property="hadoop.version.ant-internal" value="0.19">
+    <condition property="hadoop.version.ant-internal" value="0.20">
       <not>
         <isset property="hadoop.version.ant-internal"/>
       </not>
@@ -278,6 +278,19 @@
              classpath="${build.dir.hive}/anttasks/hive_anttasks.jar"/>
 
     <getversionpref property="hadoop.version.ant-internal.prefix" input="${hadoop.version.ant-internal}"/>
+
+    <condition property="jetty.jar" value="jetty-6.1.14.jar" else="jetty-5.1.4.jar">
+      <equals arg1="${hadoop.version.ant-internal.prefix}" arg2="0.20" />
+    </condition>
+
+    <condition property="jetty.util.jar" value="jetty-util-6.1.14.jar" else="jetty-ext/jsp-api.jar">
+      <!-- hadoop 0.19 and earlier does not have jetty-util.jar, so we just load another jar -->
+      <equals arg1="${hadoop.version.ant-internal.prefix}" arg2="0.20" />
+    </condition>
+
+    <condition property="servlet-api.jar" value="servlet-api-2.5-6.1.14.jar" else="servlet-api.jar">
+      <equals arg1="${hadoop.version.ant-internal.prefix}" arg2="0.20" />
+    </condition>
 
     <pathconvert property="eclipse.project">
       <path path="${basedir}"/>
@@ -292,6 +305,9 @@
         <filter token="PROJECT" value="${eclipse.project}"/>
         <filter token="HADOOPVER" value="${hadoop.version.ant-internal}"/>
         <filter token="HADOOPVERPREF" value="${hadoop.version.ant-internal.prefix}"/>
+        <filter token="JETTYJAR" value="${jetty.jar}"/>
+        <filter token="JETTYUTILJAR" value="${jetty.util.jar}"/>
+        <filter token="SERVLETAPIJAR" value="${servlet-api.jar}"/>
       </filterset>
     </copy>
     <move todir="." includeemptydirs="false">
